# nicodaimus-ha

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml  release.yml
custom_components/nicodaimus/: __init__.py  config_flow.py  const.py  conversation.py  coordinator.py  entity.py  manifest.json  sensor.py  strings.json
custom_components/nicodaimus/translations/: de.json  en.json
tests/: __init__.py  conftest.py  test_client_integration.py  test_config_flow.py  test_entity_logic.py  test_init.py  test_sensor.py
