[project]
name = "nicodaimus-ha"
version = "1.0.0"
description = "nicodAImus Home Assistant Integration"
requires-python = ">=3.12"
license = "Apache-2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
